--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Neuer Tab</title>
-    <link rel="stylesheet" href="../fonts/lato.css" />
-    <style>
-      body {
-        min-height: 100vh;
-      }
-    </style>
   </head>
-  <body></body>
+  <body>
+    <div id="sidebarEl"></div>
+  </body>
 </html>
