--- a/public/newtab.html
+++ b/public/newtab.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--link rel="stylesheet" href="newtab.css" /-->
+    <link rel="stylesheet" href="fonts/lato.css" />
     <script defer src="content.js"></script>
     <script defer src="newtab.js"></script>
     <meta name="color-scheme" content="light dark" />
